--- a/pagoprop/templates/pagoprop/mis_apartamentos.html
+++ b/pagoprop/templates/pagoprop/mis_apartamentos.html
@@ -38,7 +38,7 @@
                     <strong>ID:</strong> {{ apartamento.apartamentoID }}<br>
                     <strong>Número:</strong> {{ apartamento.numeroApartamento }}
                 </p>
-                <a href="#" class="btn btn-primary btn-sm">
+                <a href="{% url 'detalle_apartamento' apartamento.apartamentoID %}" class="btn btn-primary btn-sm">
                     <i class="fas fa-eye"></i> Ver detalles
                 </a>
                 <a href="{% url 'subir_comprobante' %}" class="btn btn-success btn-sm"><i class="fas fa-upload"></i> Subir comprobante</a>
