--- a/pagoprop/templates/pagoprop/detalle_apartamento.html
+++ b/pagoprop/templates/pagoprop/detalle_apartamento.html
@@ -182,7 +182,7 @@
 
 <!-- Botón volver -->
 <div class="row mt-4">
-    <div class="col-12">
+    <div class="col-12 mb-4">
         <a href="{% url 'mis_apartamentos' %}" class="btn btn-secondary">
             <i class="fas fa-arrow-left"></i> Volver a Mis Apartamentos
         </a>
