--- a/pagoprop/templates/pagoprop/mis_comprobantes.html
+++ b/pagoprop/templates/pagoprop/mis_comprobantes.html
@@ -314,7 +314,7 @@
 {% endif %}
 
 <div class="row mt-4">
-    <div class="col-12">
+    <div class="col-12 mb-4">
         <a href="{% url 'dashboard' %}" class="btn btn-secondary">
             <i class="fas fa-arrow-left"></i> Volver al Dashboard
         </a>
