elimino estadisticas total recaudado y se agrega filtros para admin panel en todos los comprobantes

--- a/pagoprop/templates/pagoprop/mis_comprobantes.html
+++ b/pagoprop/templates/pagoprop/mis_comprobantes.html
@@ -148,7 +148,7 @@
             <table class="table table-hover table-bordered shadow-sm">
                 <thead class="table-dark">
                     <tr>
-                        <th>ID</th>
+                        <!-- <th>ID</th> -->
                         <th>Apartamento</th>
                         <th>Monto</th>
                         <th>Fecha</th>
@@ -159,7 +159,7 @@
                 <tbody>
                     {% for comprobante in comprobantes %}
                     <tr>
-                        <td>{{ comprobante.comprobanteID }}</td>
+                        <!-- <td>{{ comprobante.comprobanteID }}</td> -->
                         <td>
                             <span class="badge bg-primary">
                                 Apto. {{ comprobante.apartamento.numeroApartamento }}
