--- a/pagoprop/templates/pagoprop/dashboard.html
+++ b/pagoprop/templates/pagoprop/dashboard.html
@@ -46,16 +46,16 @@
         </div>
     </div>
 
-    <div class="col-md-4 mb-4">
+    <!-- <div class="col-md-4 mb-4">
         <div class="card text-center shadow">
             <div class="card-body">
                 <i class="fas fa-comments fa-3x text-warning mb-3"></i>
-                <h5 class="card-title">PQRS</h5>
+                <h5 class="card-title">Próximamente</h5>
                 <p class="card-text display-4">0</p>
                 <a href="#" class="btn btn-warning">Crear PQRS</a>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 
 <div class="row mt-4">
