--- a/pagoprop/templates/pagoprop/admin_dashboard.html
+++ b/pagoprop/templates/pagoprop/admin_dashboard.html
@@ -174,7 +174,7 @@
 </div>
 
 <div class="row mt-4">
-    <div class="col-12">
+    <div class="col-12 mb-4">
         <a href="{% url 'dashboard' %}" class="btn btn-secondary">
             <i class="fas fa-arrow-left"></i> Volver al Dashboard
         </a>
