--- a/pagoprop/templates/pagoprop/admin_dashboard.html
+++ b/pagoprop/templates/pagoprop/admin_dashboard.html
@@ -10,7 +10,7 @@
     <div class="col-12">
         <h1>
             <i class="fas fa-user-shield text-danger"></i>
-            Panel de Administración
+            Panel de Administracións
         </h1>
         <p class="text-muted">Vista general del edificio</p>
     </div>
@@ -74,22 +74,22 @@
             </div>
             <div class="card-body">
                 <div class="row">
-    <div class="col-md-4 mb-3">
-        <a href="{% url 'admin_todos_comprobantes' %}" class="btn btn-primary w-100">
-            <i class="fas fa-file-invoice-dollar"></i> Ver Todos los Comprobantes
-        </a>
-    </div>
-    <div class="col-md-4 mb-3">
-        <a href="{% url 'admin_asignar_apartamento' %}" class="btn btn-success w-100">
-            <i class="fas fa-user-plus"></i> Asignar Apartamento
-        </a>
-    </div>
-    <div class="col-md-4 mb-3">
-        <a href="/admin/" class="btn btn-secondary w-100">
-            <i class="fas fa-cog"></i> Django Admin
-        </a>
-    </div>
-</div>
+                    <div class="col-md-4 mb-3">
+                        <a href="{% url 'admin_todos_comprobantes' %}" class="btn btn-primary w-100">
+                            <i class="fas fa-file-invoice-dollar"></i> Ver Todos los Comprobantes
+                        </a>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <a href="{% url 'admin_asignar_apartamento' %}" class="btn btn-success w-100">
+                            <i class="fas fa-user-plus"></i> Asignar Apartamento
+                        </a>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <a href="/admin/" class="btn btn-secondary w-100">
+                            <i class="fas fa-cog"></i> Django Admin
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
